basic zip functionality + style fixes

--- a/app/views/repositories/new.html.erb
+++ b/app/views/repositories/new.html.erb
@@ -11,5 +11,5 @@
   <div class="field">
     <%= f.text_field :link, class: 'rep-field' %>
   </div>
-  <div class="actions"><%= f.submit "Найти" %></div>
+  <div class="actions"><%= f.submit "Search", class: 'submit' %></div>
 <% end %>
